--- a/skyfolk/plantillas/base_interface.html
+++ b/skyfolk/plantillas/base_interface.html
@@ -95,6 +95,9 @@ function cambiopagina(){
   <input type="text" id="searchterm" placeholder="¿Que es lo que quieres buscar?" />
   <button type="submit" class="btn">¡Buscar!</button>   
   </div></li></li></ul>
+  <span class="fontawesome-cog"></span>
+  <span class="fontawesome-comment-alt"></span>
+  <span class="fontawesome-th"></span>
 </nav>
 
 {% block content %}{% endblock %}
