--- a/skyfolk/plantillas/inicio.html
+++ b/skyfolk/plantillas/inicio.html
@@ -19,8 +19,9 @@
 					    	-->
 						    <!--<p class="clearfix"-->
 						    	<span class="block-button1">
-							    	<a class="link-b" href='/newuser'>Registrarse</a>
-							     	<!--<input type="submit" name="submit" value="Iniciar sesión" class="button-reg">-->
+								<a href='/newuser' class="link-b">Registrarse</a>
+
+							      <!--<input type="submit" name="submit" value="Iniciar sesión" class="button-reg">-->
 							     	<input type="submit" name="submit" value="Iniciar sesion">
 						     	<span/>
 					        <!--</p>-->
