--- a/skyfolk/plantillas/profile.html
+++ b/skyfolk/plantillas/profile.html
@@ -50,7 +50,7 @@
             <h1>{{ user.first_name }} {{ user.last_name }}</h1>
             <p>{{ user.username }}</p>
           </header>
-          <div class="status">Play hard.</div>
+          <div class="status">Play hard.</div><span class="fontawesome-pencil"> </span>
           <ul class="stats">
             <li><a href="amigos.html"><strong>380</strong><span>Seguidores</span></a></li>
             <li><a><strong>934</strong><span>Me gusta</span></a></li>
