--- a/skyfolk/plantillas/nologin.html
+++ b/skyfolk/plantillas/nologin.html
@@ -1,7 +1,7 @@
 {% extends 'base_user.html' %}
 {% block content %}
 	<div class="block-form">
-		<div class="msgalert">Usuario y contrasena no coinciden, o no existen</div>
+		<div class="msgalert">Usuario y contrasena no coinciden, o no existen.</div>
 		<a href='/' class="link-c">Volver a intentarlo</a>
 	</div>
 {% endblock%}
