--- a/skyfolk/plantillas/base_user.html
+++ b/skyfolk/plantillas/base_user.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-		<meta charset="UTF-8" />
+	     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+         <link rel="stylesheet" type="text/css" href="css/jquery.gritter.css" />
+         <script type="text/javascript" src="http://www.google.com/jsapi"></script>
+         <script type="text/javascript">google.load('jquery', '1.7.1');</script>
+         <script type="text/javascript" src="js/jquery.gritter.js"></script>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>¡Bienvenido!</title>
@@ -28,7 +32,36 @@
 		</style>
     </head>
     <body>
+<a href="#" id="add-regular">Prueba notificacion</a>
 
+
+<script type="text/javascript">
+
+
+
+
+
+		$('#add-regular').click(function(){
+
+			$.gritter.add({
+				// (string | mandatory) the heading of the notification
+				title: '¡Juan se ha unido a Skyfolk!',
+				// (string | mandatory) the text inside the notification
+				text: '¿Quieres añadirlo a tus contactos? <a href="#" style="color:#66FF80">Aceptar.</a> <a href="#" style="color:#F43E3E">Rechazar</a>',
+				// (string | optional) the image to display on the left
+				image: 'images/5.jpg',
+				// (bool | optional) if you want it to fade out on its own or just sit there
+				sticky: false,
+				// (int | optional) the time you want it to be alive for before fading out
+				time: ''
+			});
+
+			return false;
+
+		});
+
+       
+</script>
        <div id="texto"><h2>S<span>kyfolk.</span></h2></div>
        {% block content %}{% endblock %}
             
