--- a/skyfolk/plantillas/base_user.html
+++ b/skyfolk/plantillas/base_user.html
@@ -49,7 +49,7 @@
 				// (string | mandatory) the text inside the notification
 				text: '¿Quieres añadirlo a tus contactos? <a href="#" style="color:#66FF80">Aceptar.</a> <a href="#" style="color:#F43E3E">Rechazar</a>',
 				// (string | optional) the image to display on the left
-				image: '{{STATIC_URL}}/images/5.jpg',
+				image: '{{STATIC_URL}}img/5.jpg',
 				// (bool | optional) if you want it to fade out on its own or just sit there
 				sticky: false,
 				// (int | optional) the time you want it to be alive for before fading out
