--- a/skyfolk/plantillas/base_user.html
+++ b/skyfolk/plantillas/base_user.html
@@ -5,6 +5,7 @@
          <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/jquery.gritter.css" />
          <script type="text/javascript" src="http://www.google.com/jsapi"></script>
          <script type="text/javascript">google.load('jquery', '1.7.1');</script>
+		 <script type="text/javascript" src="{{STATIC_URL}}js/jquery.gritter.min.js"></script>
          <script type="text/javascript" src="{{STATIC_URL}}js/jquery.gritter.js"></script>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
