--- a/skyfolk/plantillas/base_user.html
+++ b/skyfolk/plantillas/base_user.html
@@ -2,10 +2,9 @@
 <html lang="en">
     <head>
 	     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/jquery.gritter.css" />
+         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/noti.css" />
          <script type="text/javascript" src="http://www.google.com/jsapi"></script>
          <script type="text/javascript">google.load('jquery', '1.7.1');</script>
-		 <script type="text/javascript" src="{{STATIC_URL}}js/jquery.gritter.min.js"></script>
          <script type="text/javascript" src="{{STATIC_URL}}js/jquery.gritter.js"></script>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
