--- a/skyfolk/plantillas/inicio.html
+++ b/skyfolk/plantillas/inicio.html
@@ -18,12 +18,12 @@
 					        </p>
 					    	-->
 						    <!--<p class="clearfix"-->
-						    	<span class="block-button1">
+						    	<input type="submit" name="submit" value="Registrarse" class="button-reg">
 								<a href='/newuser' class="link-b">Registrarse</a>
 
 							      <!--<input type="submit" name="submit" value="Iniciar sesión" class="button-reg">-->
 							     	<input type="submit" name="submit" value="Iniciar sesion">
-						     	<span/>
+						     
 					        <!--</p>-->
 				</form>
 			</div>
