--- a/skyfolk/plantillas/inicio.html
+++ b/skyfolk/plantillas/inicio.html
@@ -18,8 +18,7 @@
 					        </p>
 					    	-->
 						    <!--<p class="clearfix"-->
-						   
-						 
+						    	<input type="submit" name="submit" value="Registrarse" class="button-reg" a href='/newuser'>
 								<a href='/newuser' class="button-reg">Registrarse</a>
 
 							      <!--<input type="submit" name="submit" value="Iniciar sesión" class="button-reg">-->
