--- a/skyfolk/plantillas/inicio.html
+++ b/skyfolk/plantillas/inicio.html
@@ -18,10 +18,8 @@
 					        </p>
 					    	-->
 						    <!--<p class="clearfix"-->
-						    	<div class="block-button1">
-						    	<a href='/newuser' class="button-reg" id="linkLogin">Login</a>
-						      	<input type="submit" name="submit" value="Registrarse">
-						     </div>
+						    	<input type="submit" name="submit" value="Registrarse" class="button-reg">
+								<a href='/newuser' class="link-b">Registrarse</a>
 
 							      <!--<input type="submit" name="submit" value="Iniciar sesión" class="button-reg">-->
 							     	<input type="submit" name="submit" value="Iniciar sesion">
