--- a/skyfolk/plantillas/newuser.html
+++ b/skyfolk/plantillas/newuser.html
@@ -8,7 +8,7 @@
 
 						    <!--<p class="clearfix">-->
 						    <div class="block-button1">
-						    	<a href='/' class="link-b" id="linkLogin">Login</a>
+						    	<a href="/" class="myButton">Login</a>
 						      	<input type="submit" name="submit" value="Registrarse">
 						     </div>
 					        <!--</p>-->
