--- a/skyfolk/plantillas/inicio.html
+++ b/skyfolk/plantillas/inicio.html
@@ -18,8 +18,8 @@
 					        </p>
 					    	-->
 						    <!--<p class="clearfix"-->
-						    	<input type="submit" name="submit" value="Registrarse" class="button-reg">
-								<a href='/newuser' class="link-b">Registrarse</a>
+						    	
+								<a href="/newuser" class="myButton">Registrarse</a>
 
 							      <!--<input type="submit" name="submit" value="Iniciar sesión" class="button-reg">-->
 							     	<input type="submit" name="submit" value="Iniciar sesion">
