--- a/skyfolk/plantillas/profile.html
+++ b/skyfolk/plantillas/profile.html
@@ -319,7 +319,7 @@
 <div style='display:none'>
       <div id='inline_content' style='padding:10px; background:#fff;'>
         <p><strong><form action="" method="get">
-              <span><img src="{{STATIC_URL}}static/img/6.jpg"></span>
+              <span><img src="{{STATIC_URL}}img/6.jpg"></span>
               </form></strong></p>
       
       </div>
