--- a/skyfolk/plantillas/profile.html
+++ b/skyfolk/plantillas/profile.html
@@ -6,7 +6,7 @@
 
   <div id="widget" onClick="cambiopagina()"> 
     <div id="middle"><img src="../../" width="300" height="300"><span class="entypo-user"></span></div>
-    <div id="linkedin" class="size left"><span class="entypo-users"></span><a href="profile.html"></a></div>
+    <div id="linkedin" class="size left"><span class="entypo-users"></span><a href="profile.html"></div>
     <div id="dribbble" class="size right"><span class="entypo-mail"></span></div>
     <div id="facebook" class="size left"><span class="entypo-calendar"></span></div>
     <div id="twitter" class="size right"><span class="entypo-logout"></span></div>
