mejoras para acceder a otros perfiles desde un perfil

--- a/skyfolk/plantillas/profile.html
+++ b/skyfolk/plantillas/profile.html
@@ -51,8 +51,8 @@
             <p>{{ user.username }}</p>
             -->
             
-            <h1>{{ userProfileVisit.first_name }} {{ userProfileVisit.last_name }}</h1>
-            <p>{{ userProfileVisit.username }}</p>
+            <h1>{{ userProfile.first_name }} {{ userProfile.last_name }}</h1>
+            <p>{{ userProfile.username }}</p>
                      
           </header>
           <div class="status">Play hard.</div><span class="fontawesome-pencil"> </span>
