--- a/skyfolk/plantillas/base_interface.html
+++ b/skyfolk/plantillas/base_interface.html
@@ -95,9 +95,11 @@ function cambiopagina(){
   <input type="text" id="searchterm" placeholder="¿Que es lo que quieres buscar?" />
   <button type="submit" class="btn">¡Buscar!</button>   
   </div></li></li></ul>
+  {% if isProfileUser  %}
   <span class="fontawesome-cog"></span>
   <span class="fontawesome-comment-alt"></span>
   <span class="fontawesome-th"></span>
+  {% endif %}
 </nav>
 
 {% block content %}{% endblock %}
