--- a/skyfolk/plantillas/search.html
+++ b/skyfolk/plantillas/search.html
@@ -2,8 +2,30 @@
 
 {% block content %}
 
-<div>
-	Pruebaaaaa
+<div class="container-search">
+
+	<ul>
+	{% for item in resultSearch %}
+	    <li>
+	    	<div class="container-img">
+	    		<img src="{{STATIC_URL}}img/bola/2.jpg">
+	    	</div>
+	    	<div class="container-userdata">
+		    	<div class="container-fullname">
+		    		{{ item.first_name }} {{ item.last_name }}
+		    	</div>
+		    	<div class="container-username">
+		    		{{ item.username }}
+		    	</div>	    		
+	    	</div>
+	    	<span class="container-actions">
+	    		<span class="item-action">Agregar</span>
+	    		<span class="item-action"><a href="/profile/{{ item.username }}">Ver perfil</a></span>
+	    	</span>
+	    	
+	    </li>
+	{% endfor %}
+	</ul>
 </div>
 
 {% endblock %}
