--- a/skyfolk/plantillas/base_user.html
+++ b/skyfolk/plantillas/base_user.html
@@ -12,6 +12,7 @@
         <meta name="description" content="Custom Login Form Styling with CSS3" />
         <meta name="keywords" content="skyfolk, social, login, registro, sky, folk," />
         <link rel="shortcut icon" href="{{STATIC_URL}}img/nube.jpg"> 
+		<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/succes.css" />
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/style.css" />
 		<script src="{{STATIC_URL}}js/modernizr.custom.63321.js"></script>
 		<!--[if lte IE 7]><style>.main{display:none;} .support-note .note-ie{display:block;}</style><![endif]-->
@@ -34,7 +35,22 @@
     <body>
 <a href="#" id="add-regular">Prueba notificacion</a>
 
+<script src="js/jquery.min.js"></script>
+  <script src="js/iosOverlay.js"></script>
+  <script src="js/spin.min2.js"></script>
+  <script src="js/prettify.js"></script>
+  <script src="js/custom.js"></script>
+  <script>
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-37502505-1']);
+    _gaq.push(['_trackPageview']);
 
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  </script>
 <script type="text/javascript">
 
 
