--- a/skyfolk/plantillas/inicio.html
+++ b/skyfolk/plantillas/inicio.html
@@ -22,7 +22,7 @@
 								<a href="/newuser" class="myButton">Registrarse</a>
 
 							      <!--<input type="submit" name="submit" value="Iniciar sesión" class="button-reg">-->
-							     	<input type="submit" name="submit" id="login" value="Iniciar sesion">
+							     	<input type="submit" name="submit"  value="Iniciar sesion">
 						     
 					        <!--</p>-->
 				</form>
