--- a/skyfolk/plantillas/base_interface.html
+++ b/skyfolk/plantillas/base_interface.html
@@ -82,7 +82,16 @@ function cambiopagina(){
 			});
     */
 		</script>
+<script language="javascript">
+var i = 0;
 
+function contador()
+{
+i = i + 1;
+var btn = document.getElementById("boton");
+btn.value = "me gusta (" + i + ")";
+}
+</script> 
 </head>
 
 
