--- a/skyfolk/plantillas/profile.html
+++ b/skyfolk/plantillas/profile.html
@@ -58,7 +58,7 @@
           <div class="status">Play hard.</div><span class="fontawesome-pencil"> </span>
           <ul class="stats">
             <li><a href="/amigos.html"><strong>380</strong><span>Seguidores</span></a></li>
-            <li><a><strong>934</strong><span value="me gusta">Me gusta</span></a></li>
+            <li><a><strong>934</strong><span value="me gusta" onclick="javascript:contador()">Me gusta</span></a></li>
             <li><a class='inline' href="#inline_content"><strong>48</strong><span>Fotos</span></a></li>
           </ul>
         </div>
