--- a/skyfolk/plantillas/userena/profile_detail.html
+++ b/skyfolk/plantillas/userena/profile_detail.html
@@ -36,11 +36,11 @@
  
       <div class="col-lg-6 col-md-12 col-sm-12">
         <div class="user-card card">
-          <div class="user-avatar"><img src="{{STATIC_URL}}img/bola/11.jpg" class="user-bg">
+          <div class="user-avatar"><img src="{{STATIC_URL}}img/bola/11.jpg" class="user-bg"><span class="entypo-info-circled"></span>
             <input type="checkbox" id="button-menu"  />
             <div class="caja">
              <div class="item">
-                <span class="entypo-info-circled"></span>
+     
                <img src="{{STATIC_URL}}img/bola/2.jpg" class="user-pic">
                <span class="informacion">
                  <span class="entypo-plus" title="Agregar" ></span>
