--- a/skyfolk/plantillas/userena/profile_detail.html
+++ b/skyfolk/plantillas/userena/profile_detail.html
@@ -9,8 +9,8 @@
     <div id="middle"><img src="{{STATIC_URL}}img/5.jpg" width="300" height="300"><span class="entypo-user"></span></div>
     <div id="linkedin" class="size left"><span class="entypo-users"></span></div>
 -->
-    <div id="middle"><img src="../../" width="300" height="300"><span class="entypo-user"></span></div>
-    <div id="linkedin" class="size left"><a href="profile.html"></a><span class="entypo-users"></span></div>
+    <div id="middle"><img src="{{STATIC_URL}}img/bola/5.jpg" width="300" height="300"><span class="entypo-user"></span></div>
+    <div id="linkedin" class="size left"><span class="entypo-users"></span></div>
     <div id="dribbble" class="size right"><span class="entypo-mail"></span></div>
     <div id="facebook" class="size left"><span class="entypo-calendar"></span></div>
     <div id="twitter" class="size right"><a href="/outsession"></a><span class="entypo-logout"></span></div>
