--- a/skyfolk/plantillas/userena/profile_detail.html
+++ b/skyfolk/plantillas/userena/profile_detail.html
@@ -13,14 +13,14 @@
     <div id="linkedin" class="size left"><span class="entypo-users"></span></div>
     <div id="dribbble" class="size right"><span class="entypo-mail"></span></div>
     <div id="facebook" class="size left"><span class="entypo-calendar"></span></div>
-    <div id="twitter" class="size right"><a href="/outsession"><span class="entypo-logout"></span></div>
+    <div id="twitter" class="size right"><a href="/outsession"><span class="entypo-logout"></span></div></a>
   </div>
 </div>
 
 
 
 <div class="container"><wbr>
-
+  <div id="closesession"><a href="/outsession">Cerrar sesion</a></div>
 </div>
 
 
