--- a/skyfolk/plantillas/profile.html
+++ b/skyfolk/plantillas/profile.html
@@ -10,11 +10,10 @@
     <div id="linkedin" class="size left"><span class="entypo-users"></span></div>
 -->
     <div id="middle"><img src="../../" width="300" height="300"><span class="entypo-user"></span></div>
-    <div id="linkedin" class="size left"><span class="entypo-users"></span><a href="profile.html"></div>
-
+    <div id="linkedin" class="size left"><span class="entypo-users"></span></div>
     <div id="dribbble" class="size right"><span class="entypo-mail"></span></div>
     <div id="facebook" class="size left"><span class="entypo-calendar"></span></div>
-    <div id="twitter" class="size right"><span class="entypo-logout"></span><a href="/outsession"></div>
+    <div id="twitter" class="size right"><a href="/outsession"><span class="entypo-logout"></span></div></a>
   </div>
 </div>
 
@@ -40,7 +39,7 @@
             <input type="checkbox" id="button-menu"  />
             <div class="caja">
              <div class="item">
-                <span class="entypo-info-circled"></span>
+                
                <img src="{{STATIC_URL}}img/bola/2.jpg" class="user-pic">
                <span class="informacion">
                  <span class="entypo-plus" title="Agregar" ></span>
