--- a/skyfolk/plantillas/profile.html
+++ b/skyfolk/plantillas/profile.html
@@ -10,7 +10,7 @@
     <div id="linkedin" class="size left"><span class="entypo-users"></span></div>
 -->
     <div id="middle"><img src="../../" width="300" height="300"><span class="entypo-user"></span></div>
-    <div id="linkedin" class="size left"><span class="entypo-users"></span></div>
+    <div id="linkedin" class="size left"><a href="/friends"><span class="entypo-users"></span></a></div>
     <div id="dribbble" class="size right"><span class="entypo-mail"></span></div>
     <div id="facebook" class="size left"><span class="entypo-calendar"></span></div>
     <div id="twitter" class="size right"><a href="/outsession"><span class="entypo-logout"></span></div></a>
