--- a/skyfolk/plantillas/amigos.html
+++ b/skyfolk/plantillas/amigos.html
@@ -1,5 +1,5 @@
 <head>
-<link rel="stylesheet" type="text/css" href="css/amigos.css" />
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/amigos.css" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <header> <form method="get" action="/search" id="search">
