--- a/skyfolk/plantillas/profile.html
+++ b/skyfolk/plantillas/profile.html
@@ -20,7 +20,7 @@
 
 
 <div class="container"><wbr>
-  <div id="closesession"><div class="foto_perfil"><p>Nombre Apellido</p></div></div>
+<div class="foto_perfil"></div><p>Nombre Apellido</p>
 </div>
 
 
