--- a/skyfolk/plantillas/profile.html
+++ b/skyfolk/plantillas/profile.html
@@ -20,7 +20,7 @@
 
 
 <div class="container"><wbr>
-<div class="foto_perfil"></div><p>Nombre Apellido</p>
+<div class="foto_perfil"></div><p class="nameact">Nombre Apellido</p>
 </div>
 
 
