--- a/skyfolk/plantillas/profile.html
+++ b/skyfolk/plantillas/profile.html
@@ -20,15 +20,7 @@
 
 
 <div class="container"><wbr>
-<div class="foto_perfil"></div><div id="nav">
-  <ul>
-    <a href="#">Nombre Apellido<span class="entypo-right-open-big"></span></a>
-    <li><a href="#">Configuración<span class="fontawesome-cog"></span></a></li> 
-    <li><a href="#">Aplicaciones.<span class="fontawesome-th"></span></a></li>
-    <li><a href="#">Mensajes.<span class="entypo-mail"></span></a></li>
-    
-  </ul> 
-</div>      
+<div class="foto_perfil"></div><p class="nameact">Nombre Apellido</p>
 </div>
 
 
