--- a/skyfolk/plantillas/profile.html
+++ b/skyfolk/plantillas/profile.html
@@ -21,10 +21,13 @@
 
 <div class="container"><wbr>
 <div class="foto_perfil"></div><p class="nameact">Nombre Apellido</p>
-<div id="panel1">
-<span class="fontawesome-cog"></span>
+    <!--
+    <div id="panel1">
+      <span class="fontawesome-cog"></span>
   		<span class="fontawesome-comment-alt"></span>
-  		<span class="fontawesome-th"></span></div>
+  		<span class="fontawesome-th"></span>
+    </div>
+    -->
 </div>
 
 
