--- a/skyfolk/plantillas/amigos.html
+++ b/skyfolk/plantillas/amigos.html
@@ -117,7 +117,7 @@
   <div class="perfil">
     <div class="foto_perfil"></div>
     <div class="inner_content">
-      <h2 class="nomb" id="nomb">Pablo Russiñol</h2>
+      <h2 class="nomb" id="nomb">Pablo Rossiñol</h2>
       <span id="desc">
         <p class="descripcion" id="desc_one">Profunder</p>
       <p class="descripcion" id="desc_two">Mensaje de texto de prueba </p></span>
