--- a/skyfolk/plantillas/profile.html
+++ b/skyfolk/plantillas/profile.html
@@ -12,7 +12,7 @@
     <div id="middle"><img src="../../" width="300" height="300"><span class="entypo-user"></span></div>
     <div id="linkedin" class="size left"><a href="/friends"><span class="entypo-users"></span></a></div>
     <div id="dribbble" class="size right"><span class="entypo-mail"></span></div>
-    <div id="facebook" class="size left"><a href="/novedades"><span class="entypo-calendar"></span></div></a>
+    <div id="facebook" class="size left"><a href="/news"><span class="entypo-calendar"></span></div></a>
     <div id="twitter" class="size right"><a href="/outsession"><span class="entypo-logout"></span></div></a>
   </div>
 </div>
