--- a/skyfolk/plantillas/columnas.html
+++ b/skyfolk/plantillas/columnas.html
@@ -93,7 +93,7 @@ $(function() {
 			<ul class="contnedor caption">
 				<li>
 					<figure>
-						<div><img src="images/proyecto1.jpg" alt="music image"></div>
+						<div><img src="img/proyecto1.jpg" alt="music image"></div>
 						<figcaption>
 							<h3>Poyecto 1</h3>
 							<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </span>
@@ -109,7 +109,7 @@ $(function() {
 				</li>
 				<li>
 					<figure>
-						<div><img src="images/proyecto2.jpg" alt="portfolio images"></div>
+						<div><img src="img/proyecto2.jpg" alt="portfolio images"></div>
 						<figcaption>
 							<h3>Poyecto 2</h3>
 							<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </span>
@@ -119,7 +119,7 @@ $(function() {
 				</li>
 				<li>
 					<figure>
-						<div><img src="images/proyecto3.jpg" alt="contact image"></div>
+						<div><img src="img/proyecto3.jpg" alt="contact image"></div>
 						<figcaption>
 							<h3>Poyecto 3</h3>
 							<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </span>
@@ -131,7 +131,7 @@ $(function() {
 				
 				<li>
 					<figure>
-						<div><img src="images/proyecto3.jpg" alt="contact image"></div>
+						<div><img src="img/proyecto3.jpg" alt="contact image"></div>
 						<figcaption>
 							<h3>Poyecto 4</h3>
 							<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </span>
@@ -142,7 +142,7 @@ $(function() {
 
 				<li>
 					<figure>
-						<div><img src="images/proyecto1.jpg" alt="music image"></div>
+						<div><img src="img/proyecto1.jpg" alt="music image"></div>
 						<figcaption>
 							<h3>Poyecto 5</h3>
 							<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </span>
@@ -152,7 +152,7 @@ $(function() {
 				</li>
 				<li>
 					<figure>
-						<div><img src="images/proyecto2.jpg" alt="portfolio images"></div>
+						<div><img src="img/proyecto2.jpg" alt="portfolio images"></div>
 						<figcaption>
 							<h3>Poyecto 6</h3>
 							<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </span>
