--- a/skyfolk/plantillas/columnas.html
+++ b/skyfolk/plantillas/columnas.html
@@ -93,7 +93,7 @@ $(function() {
 			<ul class="contnedor caption">
 				<li>
 					<figure>
-						<div><img src="{{STATIC_URL}}}img/proyecto1.jpg" alt="music image"></div>
+						<div><img src="{{STATIC_URL}}img/proyecto1.jpg" alt="music image"></div>
 						<figcaption>
 							<h3>Poyecto 1</h3>
 							<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </span>
