mostrar botones en la barra superior solo cuando sea el perfil del usuario

--- a/skyfolk/plantillas/base_interface.html
+++ b/skyfolk/plantillas/base_interface.html
@@ -115,7 +115,7 @@ btn.value = "me gusta (" + i + ")";
 	
 
   	</div></li></li></ul>
-  	{% if showPerfilButtons  %}
+  	{% if user.username == profile.user.username %}
   		<!--<span class="fontawesome-cog"></span>-->
   		<a class="fontawesome-cog" href="/configprofile"></a>
   		<span class="fontawesome-comment-alt"></span>
