--- a/skyfolk/plantillas/profile.html
+++ b/skyfolk/plantillas/profile.html
@@ -21,8 +21,9 @@
 
 
 
-<div class="container"><wbr>
-<div class="foto_perfil"></div><p class="nameact">Nombre Apellido</p>
+<div id="nav">
+<ul>   
+<div class="foto_perfil"></div><a href="#">Nombre Apellido<span class="entypo-right-open-big"></span></a>
     <!--
     <div id="panel1">
       <span class="fontawesome-cog"></span>
@@ -31,7 +32,6 @@
     </div>
     -->
 </div>
-
 
 
 <!--</div>-->
