--- a/skyfolk/plantillas/profile.html
+++ b/skyfolk/plantillas/profile.html
@@ -21,9 +21,10 @@
 
 
 
-<div id="nav">
-<ul>   
+<div id="nav2">
+<ul class="nameact">   
 <div class="foto_perfil"></div><a href="#">Nombre Apellido<span class="entypo-right-open-big"></span></a>
+</ul>
     <!--
     <div id="panel1">
       <span class="fontawesome-cog"></span>
