--- a/skyfolk/plantillas/base_interface.html
+++ b/skyfolk/plantillas/base_interface.html
@@ -116,7 +116,7 @@ btn.value = "me gusta (" + i + ")";
 	
 
   	</div></li></li></ul>
-  	{% if user.username == profile.user.username %}
+  	{% if showPerfilButtons or user.username == profile.user.username %}
   		<!--<span class="fontawesome-cog"></span>-->
   		<a class="fontawesome-cog" href="/configprofile"></a>
   		<span class="fontawesome-comment-alt"></span>
