--- a/skyfolk/plantillas/profile.html
+++ b/skyfolk/plantillas/profile.html
@@ -1,7 +1,7 @@
 {% extends 'base_interface.html' %}
 
 {% block content %}
-
+<head> <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/noti.css" /> </head>
 <div id="panel"> 
 
   <div id="widget" onClick="cambiopagina()"> 
