--- a/skyfolk/plantillas/base_interface.html
+++ b/skyfolk/plantillas/base_interface.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/widget1.css" />
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/buscar.css" />
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/comentarios.css" />
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/noti.css" />
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/notificacion.css" />
 <link rel="stylesheet" href="{{STATIC_URL}}css/colorbox.css" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" /> 
 
