--- a/skyfolk/plantillas/cf.html
+++ b/skyfolk/plantillas/cf.html
@@ -1,8 +1,8 @@
 {% extends 'base_interface.html' %}
 
 {% block include_files %}
+<head>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
- 	<link rel="stylesheet" href="{{STATIC_URL}}css/configuracion.css" type="text/css" media="all">
 	<link href='http://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css' />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.0.min.js" /></script>
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.min.css" rel="stylesheet" />
@@ -138,7 +138,7 @@
 		text-align:center;
 	}
 	</style>
-
+</head>
 {% endblock%}	
 
 
@@ -175,6 +175,28 @@ Verificar contraseña <input class="actual" type="password" name="Repita su nuev
 </section>
 </body>
 </header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</html>
 {% endblock%}
 
 
