--- a/skyfolk/plantillas/profile.html
+++ b/skyfolk/plantillas/profile.html
@@ -57,7 +57,7 @@
  
       <div class="col-lg-6 col-md-12 col-sm-12">
         <div class="user-card card">
-          <div class="user-avatar"><img src="{{STATIC_URL}}img/bola/11.jpg" class="user-bg"><a class="infot"><span class="entypo-info-circled"><i>Características</i></a></span>
+          <div class="user-avatar"><img src="{{STATIC_URL}}img/bola/11.jpg" class="user-bg"><a class="infot"><span class="entypo-info-circled"></span></br><i>Características</i></a>
             <input type="checkbox" id="button-menu"  />
             <div class="caja">
              <div class="item">
