--- a/skyfolk/plantillas/base_interface.html
+++ b/skyfolk/plantillas/base_interface.html
@@ -107,7 +107,7 @@ btn.value = "me gusta (" + i + ")";
 <li><div class="field" id="searchform">
   	<!--<input type="text" id="searchterm" placeholder="¿Que es lo que quieres buscar?" />-->
   	<!--<button type="submit" class="btn">¡Buscar!</button>-->
-	<form method='post' action=''>{% csrf_token %}
+	<form method='post' action='/search/'>{% csrf_token %}
 
 		{{searchForm}}
 		<!--<button type="submit" class="btn" onclick="javascript:window.location.href='/search'">¡Buscar!</button>-->
