--- a/skyfolk/plantillas/userena/originales/password_form.html
+++ b/skyfolk/plantillas/userena/originales/password_form.html
@@ -1,4 +1,4 @@
-{% extends 'cf2.html' %}
+{% extends 'userena/base_userena.html' %}
 {% load i18n %}
 {% load url from future %}
 
@@ -6,30 +6,14 @@
 
 {% block content_title %}<h2>{% blocktrans with user.username as username %}Account &raquo; {{ username }}{% endblocktrans %}</h2>{% endblock %}
 
-{% block include_files2 %}
-
-<link rel="stylesheet" href="{{STATIC_URL}}css/password_form.css" type="text/css" media="all">
-
-{% endblock %}
-
-
-{% block content_conf %}
-<section id="contra">
-	<form id="levi">
-	<h4 id="cn"> Contraseña </h4>
-	<h6 id="ch"> Cambia tu contraseña o recupera tu contraseña actual.</h6>
-	</form>
-</section>
-<section id="pass">
+{% block content %}
 <form action="" method="post" id="password_change_form">
-  <!--
   <ul id="box-nav">
     <li class="first"><a href="{% url 'userena_profile_detail' user.username %}"><span>{% trans 'View profile' %}</span></a></li>
     <li><a href="{% url 'userena_profile_edit' user.username %}">{% trans "Edit profile" %}</a></li>
     <li  class="selected"><a href="{% url 'userena_password_change' user.username %}">{% trans "Change password" %}</a></li>
     <li class="last"><a href="{% url 'userena_email_change' user.username %}">{% trans "Change email" %}</a></li>
   </ul>
-  -->
   <fieldset>
     <legend>{% trans "Change Password" %}</legend>
     {% csrf_token %}
@@ -37,6 +21,4 @@
   </fieldset>
   <input type="submit" value="{% trans "Change password" %}" />
 </form>
-</section>
 {% endblock %}
-
