--- a/skyfolk/plantillas/base_interface.html
+++ b/skyfolk/plantillas/base_interface.html
@@ -123,7 +123,7 @@ btn.value = "me gusta (" + i + ")";
   		<div id ="box-tool">
 	  		<span class="fontawesome-th"></span>
 	  		<span class="fontawesome-comment-alt"></span>
-	  		<a class="fontawesome-cog" href="/configprofile"></a>
+	  		<a class="entypo-camera" href="#></a>
 	  	</div>
 
 
