--- a/skyfolk/plantillas/profile.html
+++ b/skyfolk/plantillas/profile.html
@@ -37,10 +37,10 @@
 
    
     <div id="panel1">
-      <li><a href="#">Perfil. <span class="entypo-user"></span></a></li> 
-    <li><a href="#">Media. <span class="entypo-video"></span></a></li>
-    <li><a href="/configprofile">Configuración.<span class="fontawesome-cog"></span></a></li>
-    <li><a href="#">Mi nube. <span class="entypo-cloud"></span></a></li>
+      <li><a href="#">Profile <span class="entypo-user"></span></a></li> 
+    <li><a href="#">Media <span class="entypo-video"></span></a></li>
+    <li><a href="#">Games <span class="entypo-rocket"></span></a></li>
+    <li><a href="#">Friends <span class="entypo-users"></span></a></li>
 
     </div>
     
