--- a/skyfolk/plantillas/profile.html
+++ b/skyfolk/plantillas/profile.html
@@ -57,7 +57,7 @@
  
       <div class="col-lg-6 col-md-12 col-sm-12">
         <div class="user-card card">
-          <div class="user-avatar"><img src="{{STATIC_URL}}img/bola/11.jpg" class="user-bg"><span class="entypo-info-circled"></span>
+          <div class="user-avatar"><img src="{{STATIC_URL}}img/bola/11.jpg" class="user-bg"><span class="fontawesome-pencil"> </span>
             <input type="checkbox" id="button-menu"  />
             <div class="caja">
              <div class="item">
@@ -87,7 +87,7 @@
             <p>{{ userProfile.username }}</p>
                      
           </header>
-          <div class="status">Play hard.</div><span class="fontawesome-pencil"> </span>
+          <div class="status">Play hard.</div>
           <ul class="stats">
             <li><a href="/friends"><strong>380</strong><span>Seguidores</span></a></li>
             <li><a><strong>934</strong><span value="me gusta" onclick="javascript:contador()">Me gusta</span></a></li>
