--- a/skyfolk/templates_old/columnas.html
+++ b/skyfolk/templates_old/columnas.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
-		<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/main.css" />
+		<link rel="stylesheet" type="text/css" href="css/main.css" />
 		<link href='http://fonts.googleapis.com/css?family=Cherry+Swash' rel='stylesheet' type='text/css'>
 	
 	<body>
@@ -17,7 +17,7 @@
      <script type="text/javascript" src="demo.js"></script>
 
 <body>
-<link rel="stylesheet" href="{{STATIC_URL}}css/columnas.css" type="text/css" media="all">
+<link rel="stylesheet" href="css/columnas.css" type="text/css" media="all">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
 </script>
 <script> 
