--- a/Plantillas sin usar./Inteligencia emocional/im.html
+++ b/Plantillas sin usar./Inteligencia emocional/im.html
@@ -9,6 +9,7 @@
     <h2> Mis lazos <i class="fontawesome-link"></i></h2>
     <h4>¡Cambia o modifica los lazos con tus contactos!</h4>
   </hgroup>
+  <a class="fontawesome-fire" title="Afinidad" href="afinidad/afinidad.html"></a>
 </header>
     
 <section>
