--- a/Plantillas sin usar/Mensajes privados/mb.html
+++ b/Plantillas sin usar/Mensajes privados/mb.html
@@ -1,76 +1,55 @@
+<!DOCTYPE html>
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="mb.css" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" /> 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
     </head>
     <body>
-        <aside>
-        <span class="fontawesome-envelope-alt"> Mensajes privados.</span>
-        <div class="entrada"><a class="fontawesome-list" href="#"> Bandeja de entrada.</a></div>
-            <div class="entrada"><a class="fontawesome-star" href="#"> Favoritos.</a></div>
-            <div class="entrada"><a class="fontawesome-minus-sign" href="#"> Spam.</a></div>
-            <div class="entrada"><a class="fontawesome-group" href="#"> Grupos.</a></div>
-             <div class="entrada"><input type="search" target="search" placeholder="Busca un mensaje..."></input><aside>
-        </div>
-        <header>
-        <ul>
-        <li class="fontawesome-home"> Principal</li>
-        <li class="fontawesome-eye-open"> Leidos </li>
-        <li class="fontawesome-asterisk"> Destacados </li>
-        </ul>
-        </header>
-        <section>
+      <hgroup>
+  <span><h3 class="fontawesome-envelope"> Mensajes privados</h3></span>
+  </hgroup>
+              <aside>
+    <nav class="vertical">
+      <li class="perfil"><i class="fontawesome-user"></i>Recibidos</li>
+      <li class="Contraseña"><i class="fontawesome-lock"></i>Enviados</li>
+      <li class="Seguridad"><i class="fontawesome-eye-open"></i>Mis contactos</li>
+      <li class="Movil"><i class="fontawesome-envelope-alt"></i>Grupos</li>
+      <li class="widgets"><i class="fontawesome-list-ul"></i>Spam</li>
+      <li class="Diseño"><i class="fontawesome-dashboard"></i>Relaciones</li>
+      <li class="ban"><i class="fontawesome-minus-sign"></i>Cuentas bloqueadas</li>
+      <li><div class="entrada"><input type="search" target="search" placeholder="Busca un mensaje..."></input></div></li>
+    </nav>
+  </aside>
+
+        <div class="wrapper">
 <div class="noti"> 
-<img src="http://th06.deviantart.net/fs70/PRE/f/2013/155/4/2/heisenberg_by_rickyart96-d67u5au.jpg"></img>
-<a target="name"> Heisenberg ha enviado un mensaje. </a><span class="fontawesome-star"></span><i>10 Agosto 2014, 10:42</i>
-<p> Buenas tardes, me gustaría hablar contigo un dia de estos...</p>
+<img src="http://th06.deviantart.net/fs70/PRE/f/2013/155/4/2/heisenberg_by_rickyart96-d67u5au.jpg" class="img-rounded"></img>
+<a target="name"> Heisenberg ha enviado un mensaje. </a><i>10 Agosto 2014, 10:42</i>
+<blockquote>Lorem ipsum dolor sit amet...</blockquote>
 </div>
 <div class="noti"> 
-<img src="http://th06.deviantart.net/fs70/PRE/f/2013/155/4/2/heisenberg_by_rickyart96-d67u5au.jpg"></img>
-<a target="name"> Heisenberg ha enviado un mensaje. </a><span class="fontawesome-star"></span><i>10 Agosto 2014, 10:42</i>
-<p> Lorem ipsum dolor sit amet...</p>
+<img src="http://th06.deviantart.net/fs70/PRE/f/2013/155/4/2/heisenberg_by_rickyart96-d67u5au.jpg" class="img-rounded"></img>
+<a target="name"> Heisenberg ha enviado un mensaje. </a><i>10 Agosto 2014, 10:42</i>
+<blockquote>Lorem ipsum dolor sit amet...</blockquote>
 </div>
 <div class="noti"> 
-<img src="http://th06.deviantart.net/fs70/PRE/f/2013/155/4/2/heisenberg_by_rickyart96-d67u5au.jpg"></img>
-<a target="name"> Heisenberg ha enviado un mensaje. </a><span class="fontawesome-star"></span><i>10 Agosto 2014, 10:42</i>
-<p>  lorem ante, dapibus in, viverra quis...</p>
+<img src="http://th06.deviantart.net/fs70/PRE/f/2013/155/4/2/heisenberg_by_rickyart96-d67u5au.jpg" class="img-rounded"></img>
+<a target="name"> Heisenberg ha enviado un mensaje. </a><i>10 Agosto 2014, 10:42</i>
+<blockquote>Lorem ipsum dolor sit amet...</blockquote>
 </div>
 <div class="noti"> 
-<img src="http://th06.deviantart.net/fs70/PRE/f/2013/155/4/2/heisenberg_by_rickyart96-d67u5au.jpg"></img>
-<a target="name"> Heisenberg ha enviado un mensaje. </a><span class="fontawesome-star"></span><i>10 Agosto 2014, 10:42</i>
-<p> leo eget bibendum sodales...</p>
+<img src="http://th06.deviantart.net/fs70/PRE/f/2013/155/4/2/heisenberg_by_rickyart96-d67u5au.jpg" class="img-rounded"></img>
+<a target="name"> Heisenberg ha enviado un mensaje. </a><i>10 Agosto 2014, 10:42</i>
+<blockquote>Lorem ipsum dolor sit amet...</blockquote>
 </div>
 <div class="noti"> 
-<img src="http://th06.deviantart.net/fs70/PRE/f/2013/155/4/2/heisenberg_by_rickyart96-d67u5au.jpg"></img>
-<a target="name"> Heisenberg ha enviado un mensaje. </a><span class="fontawesome-star"></span><i>10 Agosto 2014, 10:42</i>
-<p> Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero...</p>
-</div>
-<div class="noti"> 
-<img src="http://th06.deviantart.net/fs70/PRE/f/2013/155/4/2/heisenberg_by_rickyart96-d67u5au.jpg"></img>
-<a target="name"> Heisenberg ha enviado un mensaje. </a><span class="fontawesome-star"></span><i>10 Agosto 2014, 10:42</i>
-<p> Buenas tardes, me gustaría hablar contigo un dia de estos...</p>
-</div>
-<div class="noti"> 
-<img src="http://th06.deviantart.net/fs70/PRE/f/2013/155/4/2/heisenberg_by_rickyart96-d67u5au.jpg"></img>
-<a target="name"> Heisenberg ha enviado un mensaje. </a><span class="fontawesome-star"></span><i>10 Agosto 2014, 10:42</i>
-<p> Lorem ipsum dolor sit amet...</p>
-</div>
-<div class="noti"> 
-<img src="http://th06.deviantart.net/fs70/PRE/f/2013/155/4/2/heisenberg_by_rickyart96-d67u5au.jpg"></img>
-<a target="name"> Heisenberg ha enviado un mensaje. </a><span class="fontawesome-star"></span><i>10 Agosto 2014, 10:42</i>
-<p>  lorem ante, dapibus in, viverra quis...</p>
-</div>
-<div class="noti"> 
-<img src="http://th06.deviantart.net/fs70/PRE/f/2013/155/4/2/heisenberg_by_rickyart96-d67u5au.jpg"></img>
-<a target="name"> Heisenberg ha enviado un mensaje. </a><span class="fontawesome-star"></span><i>10 Agosto 2014, 10:42</i>
-<p> leo eget bibendum sodales...</p>
-</div>
-<div class="noti"> 
-<img src="http://th06.deviantart.net/fs70/PRE/f/2013/155/4/2/heisenberg_by_rickyart96-d67u5au.jpg"></img>
-<a target="name"> Heisenberg ha enviado un mensaje. </a><span class="fontawesome-star"></span><i>10 Agosto 2014, 10:42</i>
-<p> Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero...</p>
+<img src="http://th06.deviantart.net/fs70/PRE/f/2013/155/4/2/heisenberg_by_rickyart96-d67u5au.jpg" class="img-rounded"></img>
+<a target="name"> Heisenberg ha enviado un mensaje. </a><i>10 Agosto 2014, 10:42</i>
+<blockquote>Lorem ipsum dolor sit amet...</blockquote>
 </div>
 
-        </section>
+</div>
     </body>
 </html>
