--- a/Plantillas sin usar./novedades/columnas.html
+++ b/Plantillas sin usar./novedades/columnas.html
@@ -48,6 +48,29 @@ src="http://www.youtube.com/embed/XGSy3_Czz8k">
 				</li>
 				<li>
 					<figure>
+						<div><img src="images/proyecto1.jpg" alt="music image"></div>
+						<figcaption>
+							<h4>Pedro Picapiedra ha publicado un mensaje.</h4>
+							<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </span>
+							<a href="" class="btn_hover">Visitar</a>
+						</figcaption>
+					</figure>
+				</li>
+				<li>
+					<figure>
+						<div><img src="images/proyecto2.jpg" alt="portfolio images"></div>
+						<figcaption>
+							<h4>Pedro ha publicado un vídeo.</h4>
+							<span>Nuevo video de Factor X.  </span>
+							<iframe width="200" height="125"
+src="http://www.youtube.com/embed/XGSy3_Czz8k">
+</iframe>
+							<a href="" class="btn_hover">Visitar</a>
+						</figcaption>
+					</figure>
+				</li>
+				<li>
+					<figure>
 						<div><img src="http://www.flixya.com/files-photo/m/a/s/mastersken9-1952794.jpg" alt="contact image"></div>
 						<figcaption>
 							<h4>Pedro ha publicado una foto con Paco.</h4>
@@ -89,7 +112,42 @@ src="http://www.youtube.com/embed/XGSy3_Czz8k">
 						</figcaption>
 					</figure>
 				</li>
-	
+
+				<li>
+					<figure>
+						<div><img src="images/proyecto1.jpg" alt="music image"></div>
+						<figcaption>
+							<h4>Pedro Picapiedra ha publicado un mensaje.</h4>
+							<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </span>
+							<a href="" class="btn_hover">Visitar</a>
+						</figcaption>
+					</figure>
+				</li>
+				<li>
+					<figure>
+						<div><img src="images/proyecto2.jpg" alt="portfolio images"></div>
+						<figcaption>
+							<h4>Pedro ha publicado un vídeo.</h4>
+							<span>Nuevo video de Factor X.  </span>
+							<iframe width="200" height="125"
+src="http://www.youtube.com/embed/XGSy3_Czz8k">
+</iframe>
+							<a href="" class="btn_hover">Visitar</a>
+						</figcaption>
+					</figure>
+				</li>
+	            <li>
+	             <div class="comm">
+	             <div class="img">
+	             <img src="http://ar.cdn01.mundotkm.com/2013/01/jennifer-lawrence-oscar-ppal.jpg">
+	             </div>
+                    <div class="contenido">
+                   <h4>Jennifer ha publicado un comentario en su tablón</h4>
+                   <span><blockquote>Lorem Ipsum is simply dummy text of the printing and typesetting indus</blockquote></span>
+                  </div>
+	             <div>
+
+	            </li>
 			</ul>
 		</div>
 	</body>
