--- a/Plantillas sin usar/Mensajes privados/mb.html
+++ b/Plantillas sin usar/Mensajes privados/mb.html
@@ -7,6 +7,12 @@
 
     </head>
     <body>
+
+<nav class="box-tool">
+  <li><div class="logo"></div></li>
+  <li class="chat"><div></div></li>
+</nav>
+<div class="contenedor">
       <hgroup>
   <span><h3 class="fontawesome-envelope"> Mensajes privados</h3></span>
   </hgroup>
@@ -50,6 +56,7 @@
 <blockquote>Lorem ipsum dolor sit amet...</blockquote>
 </div>
 
+</div>
 </div>
     </body>
 </html>
