--- a/Plantillas sin usar/novedades/columnas.html
+++ b/Plantillas sin usar/novedades/columnas.html
@@ -11,11 +11,22 @@
 
 
 </head>
-
+<nav class="box-tool">
+  <li><div class="logo"></div></li>
+  <li class="chat"><div></div></li>
+</nav>
 			
 		<div class="container">
 
-			<h2>Novedades</h2>
+			<h3>Novedades</h3>
+			<div class="opciones">
+			<ul>
+			<li class="popular"></li>
+			<li class="descubre"></li>
+			<li class="novedades"></li>
+			<li class="actividad"></li>
+			</ul>
+			</div>
 			<ul class="contnedor caption">
 				<li>
 					<figure>
